syntax = "proto3";

package com.academy.fintech.disbursement;

option java_multiple_files = true;

service DisbursementService{
  rpc Disbursement(DisbursementRequest) returns (DisbursementResponse) {}
}

message DisbursementRequest {
  string agreementId = 1;
  int32 disbursementAmount = 2;
}

message DisbursementResponse {
}